[package]
name = "noise_calls_pure_rpsee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
lazy_static = "1.5.0"
tokio = "1.38.0"
tokio-tungstenite = "0.23.1"
futures = "0.3.30"
snow = { path = "../../snow" }
jsonrpsee = {version = "0.23.1", features = ["client", "jsonrpsee-core", "full"]}
serde_json = { version = "1.0.117" }